# naulabs

./: CMakeLists.txt  LICENSE  annotated.html  annotated_dup.js  boxSet2D_8hpp_source.html  calgo_8hpp_source.html  classScreenBuffer-members.html  classScreenBuffer.html  classScreenBuffer__coll__graph.map  classScreenBuffer__coll__graph.md5  classScreenBuffer__inherit__graph.map  classScreenBuffer__inherit__graph.md5  classScreenRow-members.html  classScreenRow.html  classScreenRow__coll__graph.md5  classScreenRow__inherit__graph.map  classca_1_1interpol_1_1Cubic-members.html  classca_1_1interpol_1_1Cubic.html  classca_1_1interpol_1_1CubicParametric-members.html  classca_1_1interpol_1_1CubicParametric.html  classca_1_1interpol_1_1CubicParametric__coll__graph.map  classca_1_1interpol_1_1CubicParametric__coll__graph.md5  classca_1_1interpol_1_1CubicParametric__inherit__graph.map  classca_1_1interpol_1_1CubicParametric__inherit__graph.md5  classca_1_1interpol_1_1Cubic__coll__graph.map  classca_1_1interpol_1_1Cubic__coll__graph.md5  classca_1_1interpol_1_1Cubic__inherit__graph.map  classca_1_1interpol_1_1Cubic__inherit__graph.md5  classca_1_1interpol_1_1ExplicitInterpolation-members.html  classca_1_1interpol_1_1ExplicitInterpolation.html  classca_1_1interpol_1_1ExplicitInterpolation__coll__graph.map  classca_1_1interpol_1_1ExplicitInterpolation__coll__graph.md5  classca_1_1interpol_1_1ExplicitInterpolation__inherit__graph.map  classca_1_1interpol_1_1ExplicitInterpolation__inherit__graph.md5  classca_1_1interpol_1_1Interpolation-members.html  classca_1_1interpol_1_1Interpolation.html  classca_1_1interpol_1_1Interpolation__coll__graph.map  classca_1_1interpol_1_1Interpolation__coll__graph.md5  classca_1_1interpol_1_1Interpolation__inherit__graph.map  classca_1_1interpol_1_1Interpolation__inherit__graph.md5  (+219 more)
.github/workflows/: ci.yaml  docs.yaml
calgo/: CMakeLists.txt
calgo/include/calgo/: calgo.hpp
cicd/: README.md  darwin.sh  ubuntu.sh  windows.bat
cicd/cmake/: docs.cmake  pack.cmake  test.cmake
doc/: CMakeLists.txt
install/: CMakeLists.txt  calgoConfig.cmake.in
interpol/: CMakeLists.txt
interpol/include/calgo/interpol/: cubic.hpp  cubicParametric.hpp  interpol.hpp  lagrange.hpp  newtonBackward.hpp
interpol/include/interpol/: cubic.hpp  interpol.hpp  lagrange.hpp  newtonBackward.hpp
interpol/src/: cubic.cpp  cubicParametric.cpp  interpol.cpp  lagrange.cpp  newtonBackward.cpp
interpol/tests/: CMakeLists.txt  test1.cpp
lsys/: CMakeLists.txt
lsys/include/: thomas.hpp
lsys/include/calgo/lsys/: cyclicThomas.hpp  thomas.hpp
lsys/include/lsys/: thomas.hpp
lsys/src/: cyclicThomas.cpp  thomas.cpp
lsys/tests/: CMakeLists.txt  test1.cpp  testCyclicThomas.cpp
numeric/: CMakeLists.txt
numeric/include/calgo/numeric/: simpson.hpp
numeric/src/: simpson.cpp
numeric/tests/: simpson.cpp
packaging/: CMakeLists.txt  description.txt  readme.txt
run/: CMakeLists.txt  run.cpp
run/include/: run.hpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  (+25 more)
src/: CMakeLists.txt
src/calgo/: CMakeLists.txt
src/calgo/include/calgo/: calgo.hpp
src/interpol/: CMakeLists.txt
src/interpol/include/calgo/interpol/: lagrange.hpp
src/interpol/src/: cubicParametric.cpp  lagrange.cpp  newtonBackward.cpp  nodes.cpp
src/interpol/tests/: CMakeLists.txt
src/lsys/: CMakeLists.txt
src/lsys/include/calgo/lsys/: thomas.hpp
src/lsys/tests/: CMakeLists.txt  testCyclicThomas.cpp  testThomas.cpp
src/numeric/: CMakeLists.txt
src/numeric/src/: simpson.cpp
src/numeric/tests/: CMakeLists.txt
src/optim/: CMakeLists.txt
src/optim/include/calgo/optim/: firstFit2D.inl  nextFit2D.inl  packing2D.hpp  treeFit2D.inl
src/optim/tests/: CMakeLists.txt  firstFit2D.cpp  firstFitDecreasingArea2D.cpp  firstFitDecreasingHeight2D.cpp  firstFitIncreasingArea2D.cpp  firstFitIncreasingHeight2D.cpp  nextFit2D.cpp  nextFitDecreasingArea2D.cpp  nextFitDecreasingHeight2D.cpp  nextFitIncreasingHeight2D.cpp  nextFitk3IncreasingHeight2D.cpp  treeFitDecreasingArea2D.cpp  treeFitDecreasingHeigth2D.cpp  treeFitDecreasingSize2D.cpp
src/optim/tests/testutils/: CMakeLists.txt
src/optim/tests/testutils/include/calgo/optim/: boxSet2D.hpp  draw.hpp  test.hpp
