find_package(Doxygen
	REQUIRED dot doxygen
	OPTIONAL_COMPONENTS mscgen dia
)

set(DOXYGEN_GENERATE_HTML YES)
if(WIN32)
	set(DOXYGEN_GENERATE_MAN NO)
else()
	set(DOXYGEN_GENERATE_MAN YES)
endif()
set(DOXYGEN_GENERATE_LATEX NO)

set(DOXYGEN_INTERACTIVE_SVG YES)
set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
set(DOXYGEN_GENERATE_TREEVIEW YES)

set(DOXYGEN_OUTPUT_DIRECTORY 
	"${CMAKE_CURRENT_BINARY_DIR}/out"
)

set(DOXYGEN_TAGFILES
	"cppreference-doxygen-web.tag.xml=https://en.cppreference.com/w/"
)

set(DOCUMENTATION_SOURCE "../src")
cmake_path(ABSOLUTE_PATH DOCUMENTATION_SOURCE
	BASE_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
	OUTPUT_VARIABLE PSTRIP
)
set(DOXYGEN_STRIP_FROM_PATH ${PSTRIP})
	
doxygen_add_docs(doc ALL
	"${DOCUMENTATION_SOURCE}"
	WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
)
